--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
         <!-- CUSTOM ANGULAR FILES -->
         <script src="js/controllers/MainCtrl.js"></script>
-        <script src="js/controllers/UserCtrl.js"></script>
+        <script src="js/controllers/FeedCtrl.js"></script>
         <script src="js/services/SocketService.js"></script>
         <script src="js/appRoutes.js"></script>
         <script src="js/app.js"></script>
