--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
         <script src="lib/angular-ui-router/release/angular-ui-router.js"></script>
         <script src="lib/angular-material/angular-material.min.js"></script>
         <script src="lib/angular-socket-io/socket.min.js"></script>
+        <script src="lib/ngSticky/dist/sticky.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 
         <!-- CUSTOM ANGULAR FILES -->
