--- a/public/index.html
+++ b/public/index.html
@@ -21,12 +21,14 @@
         <script src="lib/angular-material/angular-material.min.js"></script>
         <script src="lib/angular-socket-io/socket.min.js"></script>
         <script src="lib/ngSticky/dist/sticky.min.js"></script>
+        <script src="lib/angular-base64/angular-base64.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 
         <!-- CUSTOM ANGULAR FILES -->
         <script src="js/controllers/MainCtrl.js"></script>
         <script src="js/controllers/FeedCtrl.js"></script>
         <script src="js/services/SocketService.js"></script>
+        <script src="js/services/FileUploaderService.js"></script>
         <script src="js/appRoutes.js"></script>
         <script src="js/app.js"></script>
 
@@ -37,18 +39,6 @@
         <nav class="navbar navbar-fixed-top">
             <div class="container" id="izzyHeader">
                 <h3 id="brandLogo" class="navbar-text navbar-left">Isabella<i class="fa fa-moon-o"></i></h3>
-                <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="javascript:void(0)" ng-click="search()">
-                            <i class="fa fa-search fa-2x"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="javascript:void(0)" ng-click="post()">
-                            <i class="fa fa-plus-square-o fa-2x"></i>
-                        </a>
-                    </li>
-                </ul>
             </div>
         </nav>
 
