fix to image gallery plugin

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
         <link rel="stylesheet" href="lib/bootstrap/dist/css/bootstrap.css">
         <link rel="stylesheet" href="lib/font-awesome/css/font-awesome.min.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="lib/photoswipe/dist/photoswipe.css">
+        <link rel="stylesheet" href="lib/photoswipe/dist/default-skin/default-skin.css">
+
         <link rel="stylesheet" href="css/app.css">
 
         <!-- JS LIBRARIES -->
@@ -21,7 +24,10 @@
         <script src="lib/angular-material/angular-material.min.js"></script>
         <script src="lib/angular-socket-io/socket.min.js"></script>
         <script src="lib/ngSticky/dist/sticky.min.js"></script>
+        <script src="lib/photoswipe/dist/photoswipe.js"></script>
+        <script src="lib/photoswipe/dist/photoswipe-ui-default.min.js"></script>
         <script src="lib/angular-base64/angular-base64.min.js"></script>
+        <script src="lib/ng-photoswipe/angular-photoswipe.min.js"></script>
         <script src="/socket.io/socket.io.js"></script>
 
         <!-- CUSTOM ANGULAR FILES -->
